[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "preorder4mlc"
version = "1.0.0"
description = "Pre-order based multi-label classification via pairwise classifiers and ILP search."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
include = ["preorder4mlc*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["preorder4mlc"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "data",
    "results",
    "logs",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (delegated to black)
    "E741",  # ambiguous variable name (l, I, etc. are pervasive in math code)
    "B008",  # function call in default argument
    "B905",  # zip() without explicit strict=
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
